changes made -- trying to debug

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hassan\\Desktop\\MyStudyLife\\smemster 8  summer semeter\\machine learning _CSE 3888\\project\\intro-to-ml-tensorflow-master\\projects\\p1_charityml\\visuals.py:48: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "C:\\Users\\hassan\\Desktop\\MyStudyLife\\summer semeter\\machine learning _CSE 3888\\project\\intro-to-ml-tensorflow-master\\projects\\p1_charityml\\visuals.py:48: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -269,6 +269,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "# Split the data into features and target label\n",
     "income_raw = data['income']\n",
     "features_raw = data.drop('income', axis = 1)\n",
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -525,6 +526,118 @@
      "text": [
       "103 total features after one-hot encoding.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['age',\n",
+       " 'education-num',\n",
+       " 'capital-gain',\n",
+       " 'capital-loss',\n",
+       " 'hours-per-week',\n",
+       " 'workclass_ Federal-gov',\n",
+       " 'workclass_ Local-gov',\n",
+       " 'workclass_ Private',\n",
+       " 'workclass_ Self-emp-inc',\n",
+       " 'workclass_ Self-emp-not-inc',\n",
+       " 'workclass_ State-gov',\n",
+       " 'workclass_ Without-pay',\n",
+       " 'education_level_ 10th',\n",
+       " 'education_level_ 11th',\n",
+       " 'education_level_ 12th',\n",
+       " 'education_level_ 1st-4th',\n",
+       " 'education_level_ 5th-6th',\n",
+       " 'education_level_ 7th-8th',\n",
+       " 'education_level_ 9th',\n",
+       " 'education_level_ Assoc-acdm',\n",
+       " 'education_level_ Assoc-voc',\n",
+       " 'education_level_ Bachelors',\n",
+       " 'education_level_ Doctorate',\n",
+       " 'education_level_ HS-grad',\n",
+       " 'education_level_ Masters',\n",
+       " 'education_level_ Preschool',\n",
+       " 'education_level_ Prof-school',\n",
+       " 'education_level_ Some-college',\n",
+       " 'marital-status_ Divorced',\n",
+       " 'marital-status_ Married-AF-spouse',\n",
+       " 'marital-status_ Married-civ-spouse',\n",
+       " 'marital-status_ Married-spouse-absent',\n",
+       " 'marital-status_ Never-married',\n",
+       " 'marital-status_ Separated',\n",
+       " 'marital-status_ Widowed',\n",
+       " 'occupation_ Adm-clerical',\n",
+       " 'occupation_ Armed-Forces',\n",
+       " 'occupation_ Craft-repair',\n",
+       " 'occupation_ Exec-managerial',\n",
+       " 'occupation_ Farming-fishing',\n",
+       " 'occupation_ Handlers-cleaners',\n",
+       " 'occupation_ Machine-op-inspct',\n",
+       " 'occupation_ Other-service',\n",
+       " 'occupation_ Priv-house-serv',\n",
+       " 'occupation_ Prof-specialty',\n",
+       " 'occupation_ Protective-serv',\n",
+       " 'occupation_ Sales',\n",
+       " 'occupation_ Tech-support',\n",
+       " 'occupation_ Transport-moving',\n",
+       " 'relationship_ Husband',\n",
+       " 'relationship_ Not-in-family',\n",
+       " 'relationship_ Other-relative',\n",
+       " 'relationship_ Own-child',\n",
+       " 'relationship_ Unmarried',\n",
+       " 'relationship_ Wife',\n",
+       " 'race_ Amer-Indian-Eskimo',\n",
+       " 'race_ Asian-Pac-Islander',\n",
+       " 'race_ Black',\n",
+       " 'race_ Other',\n",
+       " 'race_ White',\n",
+       " 'sex_ Female',\n",
+       " 'sex_ Male',\n",
+       " 'native-country_ Cambodia',\n",
+       " 'native-country_ Canada',\n",
+       " 'native-country_ China',\n",
+       " 'native-country_ Columbia',\n",
+       " 'native-country_ Cuba',\n",
+       " 'native-country_ Dominican-Republic',\n",
+       " 'native-country_ Ecuador',\n",
+       " 'native-country_ El-Salvador',\n",
+       " 'native-country_ England',\n",
+       " 'native-country_ France',\n",
+       " 'native-country_ Germany',\n",
+       " 'native-country_ Greece',\n",
+       " 'native-country_ Guatemala',\n",
+       " 'native-country_ Haiti',\n",
+       " 'native-country_ Holand-Netherlands',\n",
+       " 'native-country_ Honduras',\n",
+       " 'native-country_ Hong',\n",
+       " 'native-country_ Hungary',\n",
+       " 'native-country_ India',\n",
+       " 'native-country_ Iran',\n",
+       " 'native-country_ Ireland',\n",
+       " 'native-country_ Italy',\n",
+       " 'native-country_ Jamaica',\n",
+       " 'native-country_ Japan',\n",
+       " 'native-country_ Laos',\n",
+       " 'native-country_ Mexico',\n",
+       " 'native-country_ Nicaragua',\n",
+       " 'native-country_ Outlying-US(Guam-USVI-etc)',\n",
+       " 'native-country_ Peru',\n",
+       " 'native-country_ Philippines',\n",
+       " 'native-country_ Poland',\n",
+       " 'native-country_ Portugal',\n",
+       " 'native-country_ Puerto-Rico',\n",
+       " 'native-country_ Scotland',\n",
+       " 'native-country_ South',\n",
+       " 'native-country_ Taiwan',\n",
+       " 'native-country_ Thailand',\n",
+       " 'native-country_ Trinadad&Tobago',\n",
+       " 'native-country_ United-States',\n",
+       " 'native-country_ Vietnam',\n",
+       " 'native-country_ Yugoslavia']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -540,7 +653,9 @@
     "print(\"{} total features after one-hot encoding.\".format(len(encoded)))\n",
     "\n",
     "# Uncomment the following line to see the encoded feature names\n",
-    "# print encoded\n"
+    "# print encoded\n",
+    "\n",
+    "encoded"
    ]
   },
   {
@@ -555,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +768,22 @@
       ">50K     34015.0\n",
       "dtype: float64, F-score: <=50K    6.25\n",
       ">50K     6.25\n",
-      "dtype: float64]\n"
+      "dtype: float64]\n",
+      "  \n",
+      "income . countt <=50K    45222\n",
+      ">50K     45222\n",
+      "dtype: int64 ,\n",
+      "np .sum ==><=50K    34014\n",
+      ">50K     11208\n",
+      "dtype: int64, \n",
+      "\n",
+      "[debug] FP ==> <=50K    11208\n",
+      ">50K     34014\n",
+      "dtype: int64 ,\n",
+      "\n",
+      "[debug]TP ==><=50K    34014\n",
+      ">50K     11208\n",
+      "dtype: int64, \n"
      ]
     }
    ],
@@ -675,7 +805,14 @@
     "fscore = (1+(B*B))*(precision*recall/((B*B)*precision)+recall)\n",
     "\n",
     "# Print the results \n",
-    "print(\"Naive Predictor: [Accuracy score: {}, F-score: {}]\".format(accuracy, fscore))"
+    "print(\"Naive Predictor: [Accuracy score: {}, F-score: {}]\\n  \".format(accuracy, fscore))\n",
+    "\n",
+    "print( \"income . countt {} ,\".format(income.count()))\n",
+    "print(\"np .sum ==>{}, \".format(np.sum(income)))\n",
+    "\n",
+    "\n",
+    "print( \"\\n[debug] FP ==> {} ,\".format(FP))\n",
+    "print(\"\\n[debug]TP ==>{}, \".format(TP))\n"
    ]
   },
   {
@@ -1236,7 +1373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
