added final notes

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -977,33 +977,54 @@
     "*  real-world application\n",
     "   - medical applications, natural language processing\n",
     "* stringeth \n",
-    " -  Simplest machine learning algorithm\n",
-    " -  Less prone to over-fitting\n",
-    ",[what profromes well on ?]\n",
-    "* [weakeness]\n",
-    "* [what makes this algthem good fit for this problem]\n",
+    "   -  Simplest machine learning algorithm\n",
+    "   -  Less prone to over-fitting\n",
+    "   -  Easily extended\n",
     "\n",
+    "* weakeness\n",
+    "    - not all problems are solvable using this approach especally non-linear ones\n",
+    "   - Requires a high number of observations\n",
+    "   \n",
+    "* what makes this algthem good fit for this problem\n",
+    "    - having a fair amount of observations.\n",
     "\n",
     "\n",
     "\n",
     "# - decision trees\n",
     "\n",
     "\n",
-    "* [descripbe real-world application]\n",
-    "\n",
+    "* descripbe real-world application\n",
+    "  - application of decision trees is in the use of demographic data to find prospective clients\n",
+    "  - \n",
     "* Simple to understand and to interpret. Trees can be visualised.\n",
-    "  Requires little data preparation, its   [what profromes well on ?]\n",
+    "  Requires little data preparation  \n",
     "  \n",
-    "  \n",
-    "* [weakeness]\n",
-    "* [what makes this algthem good fit for this problem]\n",
-    "\n",
+    "  - Fast Training\n",
+    "  - Easy Data Preperation\n",
+    "   - Less data cleaning required\n",
+    "* weakeness\n",
+    "   - Unstable nature\n",
+    "   - Less effective in predicting the outcome of a continuous variable\n",
+    "   \n",
+    "* what makes this algthem good fit for this problem\n",
+    "    - the problem depends on the classifcation\n",
     "\n",
     "# -  Support Vector Machines \n",
-    "* [descripbe real-world application]\n",
-    "* [[stringeth ]] ,[what profromes well on ?]\n",
-    "* [weakeness]\n",
-    "*[ what makes this algthem good fit for this problem]\n"
+    "*  real-world application\n",
+    "    - Face detection – SVMc classify parts of the image as a face and non-face and create a square boundary around the face,\n",
+    "    \n",
+    "    - Chaotic systems control\n",
+    "* stringeth  , \n",
+    "   - SVM is more effective in high dimensional spaces.\n",
+    "    - SVM is effective in cases where the number of dimensions is greater than the number of samples.\n",
+    "    \n",
+    "    \n",
+    "* weakeness\n",
+    "    - SVM algorithm is not suitable for large data sets.\n",
+    "    - SVM does not perform very well when the data set has more noise i.e. target classes are overlapping.\n",
+    "    \n",
+    "*  what makes this algthem good fit for this problem\n",
+    "    - its not a lage data set that large dat     \n"
    ]
   },
   {
@@ -1622,6 +1643,7 @@
     "https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
     "\n",
     "https://en.wikipedia.org/wiki/Logistic_regression\n",
+    "https://corporatefinanceinstitute.com/resources/knowledge/other/decision-tree/\n",
     "\n",
     "https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html?highlight=dec#sklearn.tree.DecisionTreeClassifier.apply\n",
     "\n",
@@ -1633,13 +1655,17 @@
     "\n",
     "https://activewizards.com/blog/5-real-world-examples-of-logistic-regression-application\n",
     "\n",
+    "https://dhirajkumarblog.medium.com/top-4-advantages-and-disadvantages-of-support-vector-machine-or-svm-a3c06a2b107\n",
     "\n",
     "https://data-flair.training/blogs/applications-of-svm/\n",
     "\n",
     "https://prosancons.com/education/pros-and-cons-of-logistic-regression/\n",
     "\n",
+    "https://holypython.com/dt/decision-tree-pros-cons/\n",
+    "\n",
     "https://roboticsbiz.com/when-to-consider-decision-tree-algorithm-pros-and-cons/\n",
     "\n",
+    "https://data-flair.training/blogs/applications-of-svm/\n",
     "\n",
     "https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html"
    ]
